# PyProjTemplate

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  tox.ini.backup
src/templatepyproj/: __init__.py  module1.py  module2.py
tests/: __init__.py  test_module1.py  test_module2.py  test_pyversion.py
